testsuite/positive/Issue-git-0294.n
using System;
using System.Console;

class A[T]
{
  public class B[E] { }

  public static Test() : Type
  {
    typeof(B[_])
  }
}

module D
{
  public Main() : void
  {
    WriteLine(A[int].Test());
  }
}

/*
BEGIN-OUTPUT
A`1+B`1[T,E]
END-OUTPUT
*/ 