testsuite/negative/wrong-args.n
class A ['a, 'b] {}
class B ['a] : A ['a] {} // E: wrong number of type parameters to `A'
class C : A {} // E: wrong number of type parameters to `A'



public struct MyStruct
{
  public static a : int;

  static this(b : int) // E: static constructor cannot have any parameters
  {
    a = b;
  }
}
